--- a/manual/src/main/resources/static/index.html
+++ b/manual/src/main/resources/static/index.html
@@ -19,6 +19,9 @@
 		<div>
 		With Facebook: <a href="/login/facebook">click here</a>
 		</div>
+		<div>
+		With Google: <a href="/login/google">click here</a>
+		</div>
 	</div>
 	<div class="container" ng-show="home.authenticated">
 		Logged in as: <span ng-bind="home.user"></span>
