Added Google (works), Microsoft (works) and Twitter (broken)

--- a/github/src/main/resources/static/index.html
+++ b/github/src/main/resources/static/index.html
@@ -22,6 +22,15 @@
 		<div>
 			With Github: <a href="/login/github">click here</a>
 		</div>
+		<div>
+			With Google: <a href="/login/google">click here</a>
+		</div>
+		<div>
+			With Microsoft: <a href="/login/microsoft">click here</a>
+		</div>
+		<div>
+			With Twitter: <a href="/login/twitter">click here</a>
+		</div>
 	</div>
 	<div class="container" ng-show="home.authenticated">
 		Logged in as: <span ng-bind="home.user"></span>
