Added LinkedIn (works)

--- a/github/src/main/resources/static/index.html
+++ b/github/src/main/resources/static/index.html
@@ -31,6 +31,9 @@
 		<div>
 			With Twitter: <a href="/login/twitter">click here</a>
 		</div>
+		<div>
+			With LinkedIn: <a href="/login/linkedin">click here</a>
+		</div>
 	</div>
 	<div class="container" ng-show="home.authenticated">
 		Logged in as: <span ng-bind="home.user"></span>
