UAA identity server v2.7.1 (hortonworks/docker-cloudbreak-uaa)

--- a/github/src/main/resources/static/index.html
+++ b/github/src/main/resources/static/index.html
@@ -34,6 +34,9 @@
 		<div>
 			With LinkedIn: <a href="/login/linkedin">click here</a>
 		</div>
+		<div>
+			With UAA: <a href="/login/uaa">click here</a>
+		</div>
 	</div>
 	<div class="container" ng-show="home.authenticated">
 		Logged in as: <span ng-bind="home.user"></span>
